# tokaysec

./: .gitignore  Cargo.toml  Config.toml.example  LICENSE  README.md  openssl.cnf
.github/workflows/: rust.yml
caddy/: Caddyfile.dev
examples/: instance_tokay_policy.json  namespace_tokay_policy.json  project_tokay_policy.json  secret_tokay_policy.json
kms/: .gitignore  Cargo.toml  README.md  kekPart.sh  run.sh  tokaykms.sqlite
kms/migrations/: 20250708015331_initial_tables.sql
kms/src/: main.rs
migrations/: 20250630024703_initial_tables.sql  20250703022250_database_config_options.sql  20250718171325_dek_store_kv_store.sql
sdks/rust-sdk/: Cargo.toml
src/: app.rs  audit.rs  config.rs  db.rs  dek.rs  flags.rs  kek.rs  kek_provider.rs  main.rs  models.rs  policies.rs  routes.rs  secure_buf.rs  templated_config.rs
src/engines/: key_value.rs
src/kek_provider/: fs.rs  mod.rs  tokaykms.rs
src/routes/: auth.rs  mod.rs  projects.rs  stores.rs
src/stores/: kv.rs  mod.rs
tokaysecapp/: eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
tokaysecapp/.storybook/: preview.ts
tokaysecapp/src/: app.css
tokaysecapp/src/lib/: index.ts
tokaysecapp/src/lib/components/: CopyIDButton.svelte  app-sidebar.svelte
tokaysecapp/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  create-secrets-form.svelte  data-table.svelte  namespaceAndProject.ts  schema.ts  stores.ts
tokaysecapp/src/routes/namespace/: +layout.svelte  +layout.ts  +page.svelte
tokaysecapp/src/routes/namespace/[namespaceId]/project/[projectId]/: +layout.svelte  +page.svelte
tokaysecapp/src/routes/namespace/[namespaceId]/project/[projectId]/secrets/: +page.server.ts  +page.svelte  schema.ts
tokaysecapp/src/routes/signin/: +page.svelte
tokaysecapp/src/stories/: AddPersonIcon.svelte  AddSecretIcon.svelte  ArrowIcon.svelte  Button.stories.svelte  Button.svelte  ButtonGroup.stories.svelte  ButtonGroup.svelte  CogIcon.svelte  CopyIcon.svelte  Field.stories.svelte  Field.svelte  Header.stories.svelte  Header.svelte  HistoryIcon.svelte  Select.stories.svelte  Select.svelte
