[package]
name = "tokaysec"
version = "0.1.0"
edition = "2024"

[dependencies]
security-framework = "3.2.0"
openssl = { version = "0.10.73", features = ["vendored"] }
sha3 = { version = "0.10", features = ["asm"] }
argon2 = { version = "0.5.3", default-features = false, features = [
    "zeroize",
    "password-hash",
    "alloc",
] }
aes-gcm = { version = "0.10.3", default-features = false, features = [
    "zeroize",
    "heapless",
    "getrandom",
    "alloc",
    "aes",
] }
libc = "0.2.174"
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
async-trait = "0.1.88"
tokio = { version = "1.45.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "process",
] }
ring = "0.17.14"
hkdf = "0.12.4"
zeroize = "*"
tiny-keccak = { version = "2.0.2", features = ["kmac"] }
subtle = "2.6.1"