[package]
name = "tokaysec"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "kms"]


[dependencies]
security-framework = "3.2.0"
openssl = { version = "0.10.73", features = ["vendored"] }
sha3 = { version = "0.10", features = ["asm"] }
argon2 = { version = "0.5.3", default-features = false, features = [
    "zeroize",
    "password-hash",
    "alloc",
] }
aes-gcm = { version = "0.10.3", default-features = false, features = [
    "zeroize",
    "heapless",
    "getrandom",
    "alloc",
    "aes",
] }
libc = "0.2.174"
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
async-trait = "0.1.88"
tokio = { version = "1.45.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "process",
] }
ring = "0.17.14"
hkdf = "0.12.4"
zeroize = "1.8.1"
tiny-keccak = { version = "2.0.2", features = ["kmac"] }
subtle = "2.6.1"
bitflags = { version = "2.9.1", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "migrate",
    "json",
    "postgres",
    "ipnetwork",
    "mac_address",
    "chrono",
    "macros",
    "runtime-tokio-native-tls",
    "tls-rustls-ring-native-roots",
] }
toml = "0.8.23"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
snowflaked = "1.0.3"
axum = { version = "0.8.1", features = [
    "json",
    "query",
    "tokio",
    "http2",
    "multipart",
    "ws",
    "macros",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.15", features = [
    "json",
    "deflate",
    "rustls-tls-webpki-roots",
] }
chrono = { version = "0.4.38", features = ["serde"] }
